add initial html changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   </head>
   <body>
     <div class="container">
-      <img src="pat1.jpg" alt="african pattern" width="1200px" height="50px" />
+      <img
+        src="images/pat1.jpg"
+        alt="african pattern"
+        width="1200px"
+        height="50px"
+      />
       <h2><u>KNOW YOUR AKAN NAME</u></h2>
 
       <p>
@@ -15,19 +20,19 @@
       </p>
       <div class="pics">
         <img
-          src="css/back.jpeg"
+          src="images/back.jpeg"
           alt="a picture of an african woman"
           width="auto"
           height="300"
         />
         <img
-          src="man.jpeg"
+          src="images/man.jpeg"
           alt="a picture of an african man"
           width="auto"
           height="300"
         />
         <img
-          src="woman.jpeg"
+          src="images/woman.jpeg"
           alt="a picture of an african woman"
           width="200px"
           height="300"
@@ -48,7 +53,12 @@
           Choose your gender:
         </p>
       </div>
-      <img src="pat2.jpg" alt="african pattern" width="1200px" height="50px" />
+      <img
+        src="images/pat2.jpg"
+        alt="african pattern"
+        width="1200px"
+        height="50px"
+      />
     </div>
 
     <script src="js/scripts.js"></script>
