--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>AKAN NAMES</title>
 
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
