--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>AKAN NAMES</title>
-
+    <link href="bootstrap.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
@@ -9,7 +9,7 @@
       <img
         src="images/pat1.jpg"
         alt="african pattern"
-        width="1200px"
+        width="1100px"
         height="50px"
       />
       <h2><u>KNOW YOUR AKAN NAME</u></h2>
@@ -56,7 +56,7 @@
       <img
         src="images/pat2.jpg"
         alt="african pattern"
-        width="1200px"
+        width="1100px"
         height="50px"
       />
     </div>
