--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           Date of birth:
           <form>
             <input
-              onchange="getBirthdayIput(event)"
+              onchange="getBirthdayInput(event)"
               type="date"
               id="birthday"
               name="birthday"
@@ -66,11 +66,12 @@
               <option value="male">Male</option>
               <option value="female">Female</option>
             </select>
-            </form>
-            <br />
-            <button onclick="formsubmit()">GET NAME</button>
+          </form>
+            
         </p>
+        <button type="button" class="btn btn-dark" onclick="formsubmit()">GET NAME</button>
       </div>
+      <br>
       <img
         src="images/pat2.jpg"
         alt="african pattern"
@@ -78,5 +79,6 @@
         height="50px"
       />
     </div>
+    <script scr="scripts.js"></script>
   </body>
 </html>
