add changes to css

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
         height="50px"
       />
       <h2><u>KNOW YOUR AKAN NAME</u></h2>
-
-      <p>
+      
         Akan people fron Ghana name their children after the days in which they
         were born.Dont you find this interesting?
-      </p>
+    
       <div class="pics">
         <img
           src="images/back.jpeg"
@@ -39,9 +38,8 @@
         />
       </div>
 
-      <p>
-        Would you like to find out your Akan name? Then fill your details in the
-        form below.
+      <p id="parent">
+       <span id="akan_name_revealer">find out your Akan name? </span> 
       </p>
       <div class="dob">
         <p>
