add changes to html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
 
       <p id="parent">
-       <span id="akan_name_revealer">find out your Akan name? </span> 
+       <span id="akan_name_revealer">find out your Akan name </span> 
       </p>
       <div class="dob">
         <p>
