add changes to html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>AKAN NAMES</title>
     <link href="bootstrap.css" rel="stylesheet" />
-    <link href="styles.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" media="all"/>
   </head>
   <body>
     <div class="container">
