--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>AKAN NAMES</title>
-    <link href="bootstrap.css" rel="stylesheet" />
+    <link href="bootstrap.css" rel="stylesheet"  media="all" />
     <link href="styles.css" rel="stylesheet" media="all"/>
   </head>
   <body>
@@ -53,6 +53,7 @@
               id="birthday"
               name="birthday"
               class=" form-control form-input"
+              required
             
             />
             </div>
@@ -62,7 +63,7 @@
       </div>
       <div class="form-group">
           <label class="form-check-label"> Choose your gender:</label>   
-            <select  class="form-control form-input" required onchange="getGender()" name="gender" id="gender">
+            <select  class="form-control form-input"  onchange="getGender()" name="gender" id="gender"  required>
               <option value="">select gender</option>
               <option value="male">Male</option>
               <option value="female">Female</option>
